--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -17,7 +17,7 @@
   font-weight: 700;
   margin: 2rem;
   margin-top: 0;
-  padding-top: 20%;
+  padding-top: 11%;
 }
 .summary {
   color: rgb(255, 255, 255);
@@ -28,4 +28,31 @@
   line-height: 1.5;
   margin: 2rem;
   margin-top: 0.5rem;
+}
+
+.btn {
+  padding: 10px 25px;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-right: 0.4rem;
+  margin-bottom:5rem;;
+  border: none;
+  border-radius: 6px;
+  cursor:pointer;
+}
+.btn:hover,
+.btn:focus{
+  transform:scale(1.05);
+}
+.btn-primary {
+  color: rgb(37, 37, 37);
+  background-color: white;
+}
+.btn-secondary {
+  color: white;
+  background-color: rgba(150, 148, 148, 0.842);
+  padding: 13px 15px;
+  margin-left:0;
+  
 }
