--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -36,7 +36,7 @@
   font-weight: 700;
   margin-left: 2rem;
   margin-right: 0.4rem;
-  margin-bottom:5rem;;
+  /* margin-bottom:5rem; */
   border: none;
   border-radius: 6px;
   cursor:pointer;
