--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -11,3 +11,20 @@ h2 {
   text-align: center;
   color: white;
 }
+
+.return{
+  font-size:1.5rem;
+  font-weight:500;
+  letter-spacing: 1.1px;
+  background:transparent;
+  color:rgb(255, 255, 255);
+  border:none;
+  border-radius: 4px;
+  display:block;
+  margin:1rem auto;
+  padding:8px 16px;
+}
+.return:focus,
+.return:hover{
+  background:rgb(90, 88, 88);
+}
