--- a/src/components/Browse/AllMovie.module.css
+++ b/src/components/Browse/AllMovie.module.css
@@ -6,13 +6,14 @@
   color: white;
   font-size: 1.3rem;
   padding-left: 30px;
-  margin:0;
+  padding-bottom: 0px;
+  margin: 0;
+  margin-top: -40px;
 }
 
 .browse {
   display: flex;
-  width: 100%;
   overflow-x: scroll;
-  padding: 30px;
   padding-right: 0;
+  padding: 30px;
 }
