--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -1,9 +1,11 @@
 .container {
   font-family: "Roboto", sans-serif;
-  width: 60%;
+  width: 75%;
   color: white;
   background: #141414;
   margin: .5rem auto;
+  position: relative;
+  z-index:10;
 }
 .poster {
   width: 100%;
@@ -12,13 +14,13 @@
 }
 
 .close-button{
-    background: rgba(0, 0, 0, 0.575);
+    background: #181818;
     border-radius: 50%;
-    border:1pxx solid white;
-    padding: 7px 4px;
+    border:1pxx solid #181818;
+    padding: 7px 6px;
     position:absolute;
-    top:5%;
-    right:21%;
+    top:2%;
+    right:2%;
     cursor: pointer;
 }
 .wishlist{
@@ -26,7 +28,8 @@
     font-weight: 700;
     text-align:center;
     letter-spacing: 1.2px;
-    background: rgb(248, 244, 236);
+    color:#f2f2f2;
+    background: #e41a24;
     position:relative;
     display: inline-block;
     width:92%;
@@ -36,8 +39,7 @@
 }
 .wishlist:focus,
 .wishlist:hover{
-    background:white;
-    box-shadow:0 15px 50px -12px rgba(77, 76, 76, 0.493)
+    background:#be0811;
 }
 
 .details {
