--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -1,7 +1,7 @@
 .nav {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: white;
-  height: 4.5rem;
+  height: 100px;
   width: 100%;
   background-image: linear-gradient(
     to bottom,
