--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -17,6 +17,7 @@
   font-weight: 900;
   padding-top: 16vw;
   padding-left:30px;
+  text-shadow: 2px 2px 4px rgba(20, 20, 20,0.7);
 }
 .summary {
   color: rgb(255, 255, 255);
@@ -26,6 +27,7 @@
   letter-spacing: 1px;
   line-height: 1.5;
   margin: 2rem;
+  text-shadow: 2px 2px 4px rgba(20, 20, 20,0.7);
 }
 
 .btn {
@@ -38,6 +40,11 @@
   border: none;
   border-radius: 6px;
   cursor: pointer;
+  display:flex;
+  align-items:center;
+}
+button span{
+  margin-right:5px;
 }
 .btn:hover,
 .btn:focus {
