--- a/src/components/Browse/Movie.module.css
+++ b/src/components/Browse/Movie.module.css
@@ -45,15 +45,11 @@ img.poster {
 .details>button:focus {
   background: #c7bebf88;
 }
-/* .details>button>svg:hover,
-.details>button>svg:focus {
-} */
 .info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 7px;
-  margin-right: 7px;
+  margin:5px 7px 0 7px;
 }
 .info h4 {
   font-size: 0.6rem;
