--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -3,8 +3,8 @@
   flex-wrap: wrap;
   padding-left: 30px;
   padding-top:5rem;
-  margin: 2rem;
-  margin-top:0;
+  /* margin: 2rem; */
+  margin-top:3rem;
 }
 
 h2 {
