--- a/src/components/Browse/Movie.module.css
+++ b/src/components/Browse/Movie.module.css
@@ -12,7 +12,7 @@ img.poster {
   display: block;
   object-fit: cover;
   border-radius: 10px;
-  margin-bottom:-5px;
+  margin-bottom: -5px;
 }
 .details {
   color: rgb(255, 255, 255);
@@ -32,24 +32,25 @@ img.poster {
   margin-left: 7px;
   margin-bottom: 6px;
 }
-.details>button{
+.details > button {
   display: inline-block;
   background: transparent;
-  border:1px solid white;
+  border: 1px solid white;
   border-radius: 50%;
-  padding:3px 5px 1px;
-  margin-right:5px;
+  padding: 3px 5px 1px;
+  margin-right: 5px;
   cursor: pointer;
 }
-.details>button:hover,
-.details>button:focus {
+.details > button:hover,
+.details > button:focus {
   background: #c7bebf88;
+  border-color: #c7bebf88;
 }
 .info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin:5px 7px 0 7px;
+  margin: 5px 7px 0 7px;
 }
 .info h4 {
   font-size: 0.6rem;
