--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -1,19 +1,23 @@
 .container {
   font-family: "Roboto", sans-serif;
-  width: 75%;
   color: white;
+  width: 75%;
+  max-height: 90vh;
+  overflow-y: scroll;
   background: #141414;
-  margin: 0.5rem auto;
-  border-radius:10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   position: relative;
   z-index: 10;
+  margin: 1rem auto;
 }
 .poster {
   width: 100%;
+  height: 30rem;
   display: block;
   object-fit: cover;
-  border-top-left-radius:10px;
-  border-top-right-radius:10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .close-button {
@@ -46,8 +50,8 @@
   margin: 5px 4%;
   border-radius: 6px;
 }
-.wishlist span{
-    margin-right: 5px;
+.wishlist span {
+  margin-right: 5px;
 }
 .wishlist:focus,
 .wishlist:hover {
@@ -59,15 +63,27 @@
   justify-content: center;
   align-items: flex-start;
   padding: 0 2rem;
+  gap:10px;
 }
-.about > * {
-  display: inline-block;
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about__extra {
+  display: flex;
+}
+.about__extra > p {
   margin-right: 10px;
+  flex-shrink: 0;
 }
 .title {
   font-size: 1.8rem;
   letter-spacing: 1.3px;
-  margin-bottom: 5px;
+  max-width: 24rem;
+  text-align: start;
+  margin-bottom: 1.3rem;
 }
 .rating {
   color: rgb(236, 220, 220);
@@ -84,6 +100,7 @@
 }
 .crew {
   margin-top: 1.2em;
+  max-width:20rem;
 }
 .crew > h4 {
   font-size: 1rem;
@@ -92,4 +109,19 @@
 }
 .crew span {
   color: grey;
+}
+
+.load {
+  display: inline-block;
+  background: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 6px 6px;
+  margin: 1.5rem auto;
+  cursor: pointer;
+}
+.load:hover,
+.load:focus {
+  background: #c7bebf88;
+  border-color: #c7bebf88;
 }
