--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -116,8 +116,8 @@
   background: transparent;
   border: 1px solid white;
   border-radius: 50%;
-  padding: 6px 6px;
-  margin: 1.5rem auto;
+  padding: 5px 6px 4px 6px;
+  margin: 1.5rem 48%;
   cursor: pointer;
 }
 .load:hover,
