--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -3,21 +3,35 @@
   margin: 0;
   padding: 0;
 }
-.banner img{
+.banner img {
   position: absolute;
   z-index: -5;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+.header {
+  text-align: start;
+  font-weight: 700;
+  font-size: 2.2rem;
+  padding-top: 85px;
+  padding-left: 40px;
+  text-shadow: 2px 2px 4px rgba(20, 20, 20, 0.7);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7) 10%,
+    rgba(0, 0, 0, 0)
+  );
+}
 .title {
   color: rgb(255, 255, 255);
   position: relative;
   font-size: 3rem;
   font-weight: 900;
-  padding-top: 16vw;
-  padding-left:30px;
-  text-shadow: 2px 2px 4px rgba(20, 20, 20,0.7);
+  padding-top: 3.5vw;
+  padding-left: 30px;
+  text-shadow: 2px 2px 4px rgba(20, 20, 20, 0.7);
 }
 .summary {
   color: rgb(255, 255, 255);
@@ -27,7 +41,7 @@
   letter-spacing: 1px;
   line-height: 1.5;
   margin: 2rem;
-  text-shadow: 2px 2px 4px rgba(20, 20, 20,0.7);
+  text-shadow: 2px 2px 4px rgba(20, 20, 20, 0.7);
 }
 
 .btn {
@@ -40,11 +54,11 @@
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
 }
-button span{
-  margin-right:5px;
+button span {
+  margin-right: 5px;
 }
 .btn:hover,
 .btn:focus {
@@ -64,7 +78,7 @@ button span{
 
 .shadow {
   position: absolute;
-  z-index:-1;
+  z-index: -1;
   bottom: -7%;
   left: 0;
   width: 100%;
