--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -2,19 +2,19 @@
   display: flex;
   flex-wrap: wrap;
   padding-left: 30px;
-  padding-top:5rem;
-  /* margin: 2rem; */
-  margin-top:3rem;
+  padding-top: 1rem;
 }
-
 h2 {
   font-family: "Roboto", sans-serif;
-  font-size:3rem;
-  text-align: center;
-  color: white;
+  font-size: 3rem;
+  color: #f2f2f2;
 }
-
-.return{
+.header {
+  text-align: start;
+  margin-top: 120px;
+  padding-left:40px;
+}
+/* .return{
   font-size:1.5rem;
   font-weight:500;
   letter-spacing: 1.1px;
@@ -29,4 +29,4 @@ h2 {
 .return:focus,
 .return:hover{
   background:rgb(90, 88, 88);
-}
+} */
