wip: add error handling for data
add error handles to check for invalid duration, actors and crew, modify spacing in details page

--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -18,6 +18,7 @@
   font-weight: 900;
   padding-top: 3.5vw;
   padding-left: 30px;
+  margin-top:0;
   text-shadow: 2px 2px 4px rgba(20, 20, 20, 0.7);
 }
 .summary {
