--- a/src/components/Browse/AllMovie.module.css
+++ b/src/components/Browse/AllMovie.module.css
@@ -6,9 +6,18 @@
   color: white;
   font-size: 1.3rem;
   padding-left: 30px;
+  padding-right:10px;
   padding-bottom: 0px;
   margin: 0;
   margin-top: -40px;
+  display: inline-block;
+}
+.link{
+  font-family: "Roboto", sans-serif;
+  color:white;
+  font-size:0.85rem;
+  font-style: italic;
+  cursor: pointer;
 }
 
 .browse {
