--- a/src/components/Browse/AllMovie.module.css
+++ b/src/components/Browse/AllMovie.module.css
@@ -26,3 +26,13 @@
   padding-right: 0;
   padding: 30px;
 }
+
+@media screen and (max-width: 480px){
+  .genre{
+    margin-top: 0;
+  }
+  .browse{
+    padding:10px;
+    padding-bottom:20px;
+  }
+}
