--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -18,7 +18,7 @@
   font-weight: 900;
   padding-top: 2.5vw;
   padding-left: 30px;
-  margin-top:0;
+  margin-top: 0;
   text-shadow: 2px 2px 4px rgba(20, 20, 20, 0.7);
 }
 .summary {
@@ -64,12 +64,12 @@ button span {
   padding: 11.5px 50px;
 }
 .btn-secondary:hover,
-.btn-secondary:focus{
-  color:white;
+.btn-secondary:focus {
+  color: white;
   background-color: rgba(69, 70, 71, 0.8);
 }
-.actions{
-  display:inline-block;
+.actions {
+  display: inline-block;
 }
 
 .shadow {
@@ -85,4 +85,29 @@ button span {
     rgba(14, 14, 14, 0.6),
     #080808
   );
+}
+
+@media screen and (max-width: 480px) {
+  .title {
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 62vw;
+    margin-bottom: 1rem;
+  }
+  .summary {
+    font-weight: 400;
+    line-height: 1.1;
+    text-align: center;
+    text-shadow: 1px 1px 4px rgba(20, 20, 20, 0.7);
+  }
+  .btn {
+    padding: 12px 27px;
+    margin-bottom: 3rem;
+    margin-right: 2px;
+    margin-left:2px;
+  }
+  .btn-primary {
+    padding: 13px 33px;
+    margin-left:1rem;
+  }
 }
