--- a/src/components/Browse/MovieDetails/ExtraMovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/ExtraMovieDetails.module.css
@@ -12,7 +12,7 @@
   font-weight: 700;
   font-style: italic;
   font-size: 2rem;
-  margin-right:5px;
+  margin-right: 5px;
 }
 .container h2 {
   font-size: 2.1rem;
@@ -20,8 +20,20 @@
 }
 .label {
   color: grey;
-  font-size:1.1rem;
+  font-size: 1.1rem;
 }
-.container h3{
-  font-size:1.1rem;
+.container h3 {
+  font-size: 1.1rem;
+}
+
+@media screen and (max-width: 480px) {
+  .container h2,
+  .label__title {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+  .container h3 {
+    font-size: 1.1rem;
+    font-weight: 400;
+  }
 }
