--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -1,7 +1,7 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 80px;
+  padding-left: 150px;
   padding-top: 1rem;
 }
 h2 {
@@ -12,21 +12,18 @@ h2 {
 .header {
   text-align: start;
   margin-top: 120px;
-  padding-left:80px;
+  padding-left: 80px;
 }
-/* .return{
-  font-size:1.5rem;
-  font-weight:500;
-  letter-spacing: 1.1px;
-  background:transparent;
-  color:rgb(255, 255, 255);
-  border:none;
-  border-radius: 4px;
-  display:block;
-  margin:1rem auto;
-  padding:8px 16px;
+
+@media screen and (max-width: 480px) {
+  .header {
+    padding-left: 30px;
+  }
+  h2 {
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+  }
+  .list {
+    padding-left: 5px;
+  }
 }
-.return:focus,
-.return:hover{
-  background:rgb(90, 88, 88);
-} */
