--- a/src/components/Browse/OneGenre.module.css
+++ b/src/components/Browse/OneGenre.module.css
@@ -11,6 +11,20 @@ h2 {
 .genre {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 80px;
+  padding-left: 150px;
   padding-top: 1rem;
+}
+@media screen and (max-width: 480px) {
+  .header {
+    text-align: start;
+    margin-top: 120px;
+    padding-left: 30px;
+  }
+  h2{
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+  }
+  .genre {
+    padding-left: 5px;
+  }
 }
