--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -15,13 +15,22 @@ header {
   text-align: start;
   padding-left: 40px;
   padding-right: 15px;
-  
 }
 .genre {
   font-size: 1rem;
   color: white;
   background: rgba(0, 0, 0, 0.7);
   padding: 1px 8px;
-  height:2.1rem;
+  height: 2.1rem;
   border-radius: 5px;
+}
+
+@media screen and (max-width: 480px) {
+  .heading {
+    font-size: 1.8rem;
+  }
+  .genre{
+    font-size: 0.9rem;
+    letter-spacing: 1px;
+  }
 }
