--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -3,6 +3,19 @@
   margin: 0;
   padding: 0;
 }
+.banner__image{
+  position: inherit;
+}
+.banner__image::after{
+  content:'';
+  position: absolute;
+  top:0;
+  right:0;
+  left:0;
+  bottom:0;
+  background-color: rgba(0,0,0,0.5);
+  z-index:-1;
+}
 .banner img {
   position: absolute;
   z-index: -5;
