wip: add functions to handle genre array returned from database

--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -47,7 +47,7 @@
   width: 92%;
   border: none;
   padding: 10px 0;
-  margin: 5px 4%;
+  margin: 5px 4% 2rem 4%;
   border-radius: 6px;
 }
 .wishlist span {
