wip: implement close dropdown on click away

--- a/src/hooks/Dropdown.module.css
+++ b/src/hooks/Dropdown.module.css
@@ -8,8 +8,8 @@
   display: inline-block;
   width: 165px;
   border-radius: 8px;
-  border: 1px solid hsla(0, 0%, 100%,0.8);
-  background-color: hsla(0, 0%, 0%, 0.8);
+  border: 1px solid hsla(0, 0%, 100%, 0.5);
+  background-color: hsla(0, 0%, 0%, 0.6);
   margin: 3px;
   padding: 3px 10px;
 }
@@ -17,7 +17,8 @@
   font-size: 1.1rem;
 }
 .button {
-  font-size: 1.4rem;
+  position: absolute;
+  right:10px;
 }
 .dropdown-list {
   list-style: none;
