--- a/src/components/Auth/LogIn.module.css
+++ b/src/components/Auth/LogIn.module.css
@@ -14,7 +14,7 @@
   height: 105vh;
   width: 100%;
   opacity: 90%;
-  padding-top:2rem;
+  padding-top: 2rem;
   display: grid;
   place-items: center;
   position: relative;
@@ -23,12 +23,12 @@
 .container::before {
   content: "";
   position: absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  background: rgba(0,0,0,0.5);
-  z-index:1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 .logo {
   position: fixed;
@@ -76,8 +76,8 @@
 }
 
 .input:focus,
-.input:hover{
-    background-color: hsl(240, 1%, 39%);
+.input:hover {
+  background-color: hsl(240, 1%, 39%);
 }
 .input::placeholder {
   color: hsl(240, 1%, 60%);
@@ -102,6 +102,15 @@
   background-color: hsl(359, 94%, 38%);
 }
 
+.btn__primary:disabled,
+.btn__primary:disabled:hover,
+.btn__primary:disabled:focus {
+  background-color: hsl(359, 94%, 18%);
+  color: hsl(0, 0%, 94%);
+  border-color: hsl(0, 0%, 80%);
+  cursor: not-allowed;
+  font-weight: 600;
+}
 
 .btn__secondary {
   color: hsl(0, 0%, 94%);
@@ -143,4 +152,12 @@
 a:hover,
 a:focus {
   color: hsl(359, 95%, 38%);
+}
+
+.invalid {
+  border-bottom: 1.5px solid hsl(31, 96%, 49%);
+}
+.error {
+  color: hsl(31, 96%, 49%);
+  text-align: center;
 }
