--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -27,7 +27,7 @@
 .title {
   color: rgb(255, 255, 255);
   position: relative;
-  font-size: 3rem;
+  font-size: min(7vw,3rem);
   font-weight: 900;
   padding-top: 2.5vw;
   padding-left: 30px;
@@ -38,6 +38,7 @@
   color: rgb(255, 255, 255);
   position: relative;
   max-width: 35em;
+  font-size: max(1.5vw,0.9rem);
   font-weight: 700;
   letter-spacing: 1px;
   line-height: 1.5;
@@ -49,7 +50,7 @@
   padding: 14px 60px;
   font-size: 1.1rem;
   font-weight: 700;
-  margin-left: 2rem;
+  margin-left: 4vw;
   margin-right: 0.4rem;
   margin-bottom: 4.5rem;
   border: none;
@@ -100,27 +101,50 @@ button span {
   );
 }
 
-@media screen and (max-width: 480px) {
-  .title {
-    text-align: center;
-    font-size: 2rem;
-    padding-top: 62vw;
-    margin-bottom: 1rem;
-  }
-  .summary {
-    font-weight: 400;
-    line-height: 1.1;
-    text-align: center;
-    text-shadow: 1px 1px 4px rgba(20, 20, 20, 0.7);
-  }
+
+@media screen and (max-width: 600px) {
   .btn {
-    padding: 12px 27px;
+    padding: 12px 10px;
+    width:125px;
     margin-bottom: 3rem;
     margin-right: 2px;
     margin-left:2px;
   }
   .btn-primary {
-    padding: 13px 33px;
-    margin-left:1rem;
+    margin-left:10vw;
+    margin-right: 15px;
+    padding: 13px 10px 13px 20px;
+    padding-top: 17px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .banner img{
+    height:100vh;
+  }
+  .title {
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 40vw;
+    margin-bottom: 0.2rem;
+  }
+  .summary {
+    font-weight: 400;
+    font-size:0.9rem;
+    line-height: 1.1;
+    text-align: center;
+    text-shadow: 1px 1px 4px rgba(20, 20, 20, 0.7);
+  }
+  .btn {
+    padding: 12px 10px;
+    width:125px;
+    margin-bottom: 3rem;
+    margin-right: 2px;
+    margin-left:2px;
+  }
+  .btn-primary {
+    margin-left:18vw;
+    margin-right: 15px;
+    padding: 13px 10px 13px 20px;
+    padding-top: 17px;
   }
 }
