--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -1,15 +1,15 @@
 .container {
   font-family: "Roboto", sans-serif;
   color: white;
-  width: 67%;
-  max-height: 90vh;
+  /* width: 67%;
+  max-height: 90vh; */
   overflow-y: scroll;
   background: #141414;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   position: relative;
-  z-index: 10;
-  margin: 3rem auto 1rem auto;
+  /* z-index: 10; */
+  /* margin: 3rem auto 1rem auto; */
 }
 .poster {
   width: 100%;
