--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -3,31 +3,31 @@
   margin: 0;
   padding: 0;
 }
-.banner__image{
+.banner__image {
   position: inherit;
 }
-.banner__image::after{
-  content:'';
+.banner__image::after {
+  content: "";
   position: absolute;
   top:0;
-  right:0;
   left:0;
-  bottom:0;
-  background-color: rgba(0,0,0,0.5);
-  z-index:-1;
+  width: 100%;
+  height: 96%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 .banner img {
   position: absolute;
-  z-index: -5;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index:-1;
 }
 
 .title {
   color: rgb(255, 255, 255);
   position: relative;
-  font-size: min(7vw,3rem);
+  font-size: min(7vw, 3rem);
   font-weight: 900;
   padding-top: 2.5vw;
   padding-left: 30px;
@@ -38,7 +38,7 @@
   color: rgb(255, 255, 255);
   position: relative;
   max-width: 35em;
-  font-size: max(1.5vw,0.9rem);
+  font-size: max(1.5vw, 0.9rem);
   font-weight: 700;
   letter-spacing: 1px;
   line-height: 1.5;
@@ -59,6 +59,8 @@
   display: inline-block;
   display: flex;
   align-items: center;
+  position: relative;
+  z-index:10;
 }
 button span {
   margin-right: 5px;
@@ -86,7 +88,7 @@ button span {
   display: inline-block;
 }
 
-.shadow {
+/* .shadow {
   position: absolute;
   z-index: -1;
   bottom: -7%;
@@ -99,27 +101,26 @@ button span {
     rgba(14, 14, 14, 0.6),
     #080808
   );
-}
-
+} */
 
 @media screen and (max-width: 600px) {
   .btn {
     padding: 12px 10px;
-    width:125px;
+    width: 125px;
     margin-bottom: 3rem;
     margin-right: 2px;
-    margin-left:2px;
+    margin-left: 2px;
   }
   .btn-primary {
-    margin-left:10vw;
+    margin-left: 10vw;
     margin-right: 15px;
     padding: 13px 10px 13px 20px;
     padding-top: 17px;
   }
 }
 @media screen and (max-width: 425px) {
-  .banner img{
-    height:100vh;
+  .banner img {
+    height: 100vh;
   }
   .title {
     text-align: center;
@@ -129,20 +130,20 @@ button span {
   }
   .summary {
     font-weight: 400;
-    font-size:0.9rem;
+    font-size: 0.9rem;
     line-height: 1.1;
     text-align: center;
     text-shadow: 1px 1px 4px rgba(20, 20, 20, 0.7);
   }
   .btn {
     padding: 12px 10px;
-    width:125px;
+    width: 125px;
     margin-bottom: 3rem;
     margin-right: 2px;
-    margin-left:2px;
+    margin-left: 2px;
   }
   .btn-primary {
-    margin-left:18vw;
+    margin-left: 18vw;
     margin-right: 15px;
     padding: 13px 10px 13px 20px;
     padding-top: 17px;
