--- a/src/components/Browse/Movie.module.css
+++ b/src/components/Browse/Movie.module.css
@@ -2,11 +2,11 @@
   font-family: "Roboto", sans-serif;
   height: 10.6rem;
   width: 19rem;
-  margin-right: 10px;
+  margin-right: 15px;
+  margin-bottom:10px;
   flex-shrink: 0;
   border-radius: 10px;
   transition: transform 750ms ease;
-
   background-color: #141414;
   /* background-position: center;
   background-repeat: no-repeat;
@@ -16,12 +16,11 @@
 .movie:hover,
 .movie:focus {
   transform: scale(1.15);
-  z-index: 1;
 }
 .movie::after {
   content: "";
   position: absolute;
-  inset: 0;
+  inset: 0 0 -2%;
   z-index:3;
   opacity:0;
   background-image: linear-gradient(
@@ -32,7 +31,6 @@
     rgba(0, 0, 0, 0.03) 100%
   );
   border-radius: 10px;
-  /* box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); */
 }
 .movie:hover::after{
   opacity: 1;
@@ -44,6 +42,25 @@ img.poster {
   object-fit: cover;
   border-radius: 10px;
 }
+/* img.poster::after{
+  content: "";
+  position: absolute;
+  inset: 0 0 -2%;
+  z-index:10;
+  opacity:0;
+  background-image: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0.79) 25%,
+    rgba(0, 0, 0, 0.49) 50%,
+    rgba(0, 0, 0, 0.03) 100%
+  );
+  border-radius: 10px;
+}
+img.poster:hover::after{
+  opacity: 1;
+  z-index:5;
+}  */
 .details {
   color: rgb(255, 255, 255);
   opacity:0;
@@ -139,5 +156,11 @@ img.poster {
   .info h4:nth-child(1) {
     display: none;
     /* visibility: hidden; */
+  }
+}
+@media screen and (max-width: 425px) {
+  .movie {
+    width: 192px;
+    height: 108px;
   }
 }
