--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -1,9 +1,11 @@
 .container {
   font-family: "Roboto", sans-serif;
   color: white;
+  width: 100%;
   /* width: 67%;
   max-height: 90vh; */
   overflow-y: scroll;
+  overflow-x: hidden;
   background: #141414;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -12,15 +14,16 @@
   /* margin: 3rem auto 1rem auto; */
 }
 .poster {
-  width: 100%;
-  height: 30rem;
+  width: 78vw;
+  /* height: 30rem; */
   display: block;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  margin: 0 auto;
 }
 
-.close-button {
+/* .close-button {
   background: #3c2d2e9c;
   border-radius: 50%;
   border: 1px solid white;
@@ -32,7 +35,7 @@
 }
 .close-button:hover {
   background: #c7bebf88;
-}
+} */
 .wishlist {
   font-size: 1.3rem;
   font-weight: 700;
@@ -65,7 +68,6 @@
   padding: 0 2rem;
   gap: 10px;
 }
-
 .about {
   display: flex;
   justify-content: space-between;
@@ -126,13 +128,36 @@
   border-color: #c7bebf88;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 930px) {
+  .details {
+    flex-direction: column;
+  }
+  .summary {
+    max-width: 100%;
+  }
+  .crew {
+    max-width: 100%;
+  }
+  .crew > h4 {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 768px) {
   .container {
-    width: 87%;
+    max-width: 100%;
   }
   .poster {
     width: 100%;
-    height: 15rem;
+    /* height: 14rem; */
+    object-fit: cover;
+  }
+}
+@media screen and (max-width: 480px) {
+  .container {
+    width: 97%;
+  }
+  .poster {
+    width: 100%;
   }
   .wishlist {
     padding: 7px 0;
@@ -163,10 +188,15 @@
   .crew,
   .crew > h4 {
     margin-top: 0;
-    margin-left:0;
-    width:100%;
+    margin-left: 0;
+    width: 100%;
   }
-  .load{
-  margin: 0.5rem 45%;
+  .load {
+    margin: 0.5rem 45%;
+  }
+}
+@media screen and (max-width: 425px) {
+  .poster {
+    width: 100%;
   }
 }
