--- a/src/components/Browse/OneGenre.module.css
+++ b/src/components/Browse/OneGenre.module.css
@@ -14,6 +14,9 @@ h2 {
   padding-left: 150px;
   padding-top: 1rem;
 }
+.genre>*{
+  margin:20px;
+}
 @media screen and (max-width: 480px) {
   .header {
     text-align: start;
