--- a/src/components/Browse/OneGenre.module.css
+++ b/src/components/Browse/OneGenre.module.css
@@ -11,11 +11,11 @@ h2 {
 .genre {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 150px;
+  padding-left: min(100px,10vw);
   padding-top: 1rem;
 }
 .genre>*{
-  margin:20px;
+  margin:20px 10px 10px 0;
 }
 @media screen and (max-width: 480px) {
   .header {
@@ -28,6 +28,6 @@ h2 {
     letter-spacing: 1px;
   }
   .genre {
-    padding-left: 5px;
+    padding-left: 12px;
   }
 }
