--- a/src/components/Layout/DisplaySearchResults.module.css
+++ b/src/components/Layout/DisplaySearchResults.module.css
@@ -1,13 +1,15 @@
 .browse {
-    display: flex;
-    flex-wrap: wrap;
-    padding-right: 0;
-    padding: 30px;
-    margin-top:6rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 0;
+  padding-left: min(100px, 10vw);
+  margin-top: 6rem;
+}
+.browse > * {
+  margin: 20px 10px 10px 0;
+}
+@media screen and (max-width: 480px) {
+  .browse {
+    padding-left: 12px;
   }
-  @media screen and (max-width: 480px) {
-    .browse {
-      padding-left: 5px;
-    }
-  }
-  
+}
