--- a/src/components/Browse/Movie.module.css
+++ b/src/components/Browse/Movie.module.css
@@ -1,8 +1,9 @@
 .movie {
   font-family: "Roboto", sans-serif;
   /* height: 10.6rem; */
-  width: min(19rem,27vw);
-  margin-right: 15px;
+  /* width: min(19rem,27vw); */
+  width: max(17rem,25vw);
+  margin-right: 25px;
   margin-bottom:10px;
   flex-shrink: 0;
   border-radius: 10px;
@@ -12,13 +13,17 @@
 .movie:hover,
 .movie:focus {
   transform: scale(1.15);
+  z-index:4;
 }
 .movie::after {
   content: "";
   position: absolute;
-  inset: 0 0 -2%;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
   z-index:3;
-  opacity:0;
+  opacity: 0;
   background-image: linear-gradient(
     0deg,
     rgba(0, 0, 0, 1) 0%,
@@ -30,6 +35,7 @@
 }
 .movie:hover::after{
   opacity: 1;
+  z-index:4;
 }
 
 img.poster {
@@ -38,25 +44,6 @@ img.poster {
   object-fit: cover;
   border-radius: 10px;
 }
-/* img.poster::after{
-  content: "";
-  position: absolute;
-  inset: 0 0 -2%;
-  z-index:10;
-  opacity:0;
-  background-image: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0.79) 25%,
-    rgba(0, 0, 0, 0.49) 50%,
-    rgba(0, 0, 0, 0.03) 100%
-  );
-  border-radius: 10px;
-}
-img.poster:hover::after{
-  opacity: 1;
-  z-index:5;
-}  */
 .details {
   color: rgb(255, 255, 255);
   opacity:0;
@@ -65,6 +52,7 @@ img.poster:hover::after{
   left:0;
   bottom:0;
   width: 100%;
+  width: min(17rem,25vw);
   height:4rem;
   z-index:5;
 }
@@ -109,7 +97,7 @@ img.poster:hover::after{
 .average {
   font-weight: 700;
   color: rgb(236, 220, 220);
-  background-color: #016638;
+  background-color: hsla(153, 98%, 20%,0.7);
   padding: 4px 4px;
   border-radius: 3px;
 }
@@ -155,8 +143,22 @@ img.poster:hover::after{
   }
 }
 @media screen and (max-width: 425px) {
-  .movie {
-    width: 192px;
-    height: 108px;
+  .movie,img.poster {
+    width: 220px;
+    height: 125px;
+  }
+  .details{
+    width: 220px;
+  }
+  .movie::after{
+    opacity: 1;
+    z-index:4;
+  }
+  .movie:hover,
+  .movie:focus {
+    transform: none;
+  }
+  .details{
+    opacity: 1;
   }
 }
