--- a/src/components/Browse/AllMovie.module.css
+++ b/src/components/Browse/AllMovie.module.css
@@ -1,6 +1,9 @@
 ::-webkit-scrollbar {
   width: 0px;
 }
+.movie{
+  position: relative;
+}
 .genre {
   font-family: "Roboto", sans-serif;
   color: white;
@@ -28,11 +31,15 @@
   padding-right: 0;
   padding: 30px;
   margin-bottom:10px;
+  flex-shrink:0;
+  flex-grow: 1;
+  flex-wrap: nowrap;
+  overflow-y: hidden;
 }
 
 @media screen and (max-width: 480px){
   .genre{
-    margin-top: 0;
+    margin-top: 5px;
   }
   .browse{
     padding:10px;
