--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -2,40 +2,21 @@
   font-family: "Roboto", sans-serif;
   color: white;
   width: 100%;
-  /* width: 67%;
-  max-height: 90vh; */
   overflow-y: scroll;
   overflow-x: hidden;
   background: #141414;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   position: relative;
-  /* z-index: 10; */
-  /* margin: 3rem auto 1rem auto; */
 }
 .poster {
   width: 78vw;
-  /* height: 30rem; */
   display: block;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   margin: 0 auto;
 }
-
-/* .close-button {
-  background: #3c2d2e9c;
-  border-radius: 50%;
-  border: 1px solid white;
-  padding: 8px 10px;
-  position: absolute;
-  top: 2%;
-  right: 2%;
-  cursor: pointer;
-}
-.close-button:hover {
-  background: #c7bebf88;
-} */
 .wishlist {
   font-size: 1.3rem;
   font-weight: 700;
@@ -149,12 +130,13 @@
   .poster {
     width: 100%;
     /* height: 14rem; */
+    height:40%;
     object-fit: cover;
   }
 }
 @media screen and (max-width: 480px) {
   .container {
-    width: 97%;
+    width: 100%;
   }
   .poster {
     width: 100%;
@@ -164,7 +146,7 @@
   }
   .details {
     flex-direction: column;
-    width: 100%;
+    width: 85%;
   }
   .about {
     flex-direction: column;
@@ -177,13 +159,14 @@
     margin: 5px 14px 5px 0;
   }
   .title {
+    font-size:1.4rem;
     width: 100%;
     margin-bottom: 0.3rem;
   }
   .summary {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 400;
-    max-width: 85%;
+    max-width: 100%;
   }
   .crew,
   .crew > h4 {
