--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -4,6 +4,9 @@
   padding-left: 150px;
   padding-top: 1rem;
 }
+.movie {
+  position: relative;
+}
 h2 {
   font-family: "Roboto", sans-serif;
   font-size: 2.2rem;
