--- a/src/components/Layout/DisplaySearchResults.module.css
+++ b/src/components/Layout/DisplaySearchResults.module.css
@@ -1,12 +1,43 @@
+.error{
+  font-size: 1.8rem;
+  color:hsl(0, 0%, 98%);
+  margin-top: 6rem;
+  padding-top: 50px;
+  font-weight: 500;
+  text-align: center;
+}
+.movie{
+  position: relative;
+}
 .browse {
   display: flex;
   flex-wrap: wrap;
   padding-right: 0;
   padding-left: min(100px, 10vw);
-  margin-top: 6rem;
+  margin-top: 2rem;
 }
 .browse > * {
   margin: 20px 10px 10px 0;
+}
+
+.title{
+  display: inline-block;
+  color:white;
+  font-size: 1.7rem;
+  margin-top: 6rem;
+  padding-top: 20px;
+  padding-left: min(100px, 10vw);
+  font-weight: 400;
+  font-style: italic;
+}
+.query{
+  display: inline-block;
+  margin-left: 15px;
+  text-transform: capitalize;
+  font-weight: 600;
+  font-size: 2.1rem;
+  /* color:hsl(357, 92%, 57%); */
+  color:hsl(31, 96%, 49%);
 }
 @media screen and (max-width: 480px) {
   .browse {
