--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -22,6 +22,7 @@
 .secondary__nav {
   margin-right: 50px;
   display: flex;
+  align-items: center;
 }
 .navprofile {
   position: relative;
@@ -29,7 +30,7 @@
 .navprofile img {
   display: inline-block;
   height: 2.5rem;
-  margin: 20px 13px 0 8px;
+  margin: 0 13px 0 8px;
   border-radius: 3px;
 }
 .navprofile svg {
@@ -44,6 +45,7 @@
   position: absolute;
   right: 0;
   top: 110%;
+  z-index: 15;
   height: 2.5rem;
   width: 8.5rem;
   background: hsla(0, 0%, 0%, 0.7);
@@ -57,7 +59,7 @@
 }
 
 .nav__fixed {
-  background: hsla(0, 0%, 4%, 0.7);
+  background: hsla(0, 0%, 7%, 0.8);
   color: white;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   height: 4.5rem;
@@ -66,7 +68,7 @@
   top: 0;
   display: flex;
   justify-content: space-between;
-  z-index: 10;
+  z-index: 30;
 }
 .logo {
   color: #e50914;
@@ -82,8 +84,6 @@ a h2 {
   font-size: 1.2rem;
   font-weight: 300;
   letter-spacing: 1.2px;
-  /* margin: 0 1rem 0 1.875rem;
-  padding-top: 1.6rem; */
   padding-right: 15px;
   cursor: pointer;
 }
@@ -92,9 +92,9 @@ a.active h2 {
   font-weight: 700;
 }
 
-.search{
-  margin-top: 1.6rem;
-  padding-right:12px;
+.search {
+  /* margin-top: 1.6rem; */
+  padding-right: 12px;
 }
 
 @media screen and (max-width: 900px) {
@@ -115,5 +115,10 @@ a.active h2 {
     margin-right: 6px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
+  .signout__button {
+    top: 100%;
+    height: 2rem;
+    width: 6.5rem;
+  }
 }
