--- a/src/components/Auth/LogIn.module.css
+++ b/src/components/Auth/LogIn.module.css
@@ -39,7 +39,7 @@
 }
 
 .input__form {
-  height: 95vh;
+  min-height: 95vh;
   width: 37vw;
   background: rgba(0, 0, 0, 0.9);
   display: flex;
@@ -82,7 +82,11 @@
 .input::placeholder {
   color: hsl(240, 1%, 60%);
 }
-
+.loader {
+  height: 3rem;
+  width: 3rem;
+  text-align: center;
+}
 .btn__primary {
   color: hsl(0, 0%, 94%);
   background-color: hsl(359, 94%, 46%);
@@ -91,7 +95,7 @@
   width: 85%;
   font-size: 1.1rem;
   letter-spacing: 1.3px;
-  margin-top: 1.5rem;
+  margin-top: 0.85rem;
   margin-bottom: 0.5rem;
   border-radius: 5px;
   cursor: pointer;
@@ -153,13 +157,67 @@ a:hover,
 a:focus {
   color: hsl(359, 95%, 38%);
 }
+.loader::after {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  top: 45px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 2px solid transparent;
+  border-top-color: hsl(240, 1%, 60%);
+  border-radius: 50%;
+  animation: loading-spinner 1s ease infinite;
+}
+
+@keyframes loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
+  }
+}
 
 .invalid {
   border-bottom: 1.5px solid hsl(31, 96%, 49%);
 }
+
 .error {
   color: hsl(31, 96%, 49%);
-  text-align: center;
+  text-align: left;
+  line-height: 1.2;
+  margin-top: 5px;
+}
+.error ul {
+  list-style: none;
+}
+
+.alert {
+  color: hsl(359, 95%, 38%);
+  background: hsla(359, 95%, 88%, 0.8);
+  border-left: 3px solid hsl(359, 95%, 38%);
+  display: flex;
+  align-items: flex-start;
+  width: 85%;
+  padding: 10px 5px;
+  margin-bottom: 0.5rem;
+  border-radius: 3px;
+}
+.alert svg,
+.alert h4 {
+  margin-left: 8px;
+}
+.alert svg {
+  flex-basis: 22px;
+  flex-shrink: 0;
+}
+.alert h4 {
+  font-size: 0.9rem;
+  line-height: 1.3;
 }
 
 @media screen and (max-width: 768px) {
@@ -174,10 +232,16 @@ a:focus {
 
 @media screen and (max-width: 480px) {
   .input__form {
-    width: 90vw;
+    width: 98vw;
   }
   .btn__primary,
   .btn__secondary {
     min-height: 3.5rem;
+  }
+  .logo {
+    z-index: 13;
+    height: 2.5rem;
+    filter: saturate(0.9);
+    top: 1.5rem;
   }
 }
