--- a/src/components/Browse/OneGenre.module.css
+++ b/src/components/Browse/OneGenre.module.css
@@ -25,12 +25,10 @@ h2 {
     text-align: start;
     margin-top: 120px;
     padding-left: 30px;
+    margin-bottom: 0;
   }
   h2{
     font-size: 1.8rem;
     letter-spacing: 1px;
-  }
-  .genre {
-    padding-left: 12px;
   }
 }
