--- a/src/components/Layout/DisplaySearchResults.module.css
+++ b/src/components/Layout/DisplaySearchResults.module.css
@@ -36,11 +36,22 @@
   text-transform: capitalize;
   font-weight: 600;
   font-size: 2.1rem;
-  /* color:hsl(357, 92%, 57%); */
   color:hsl(31, 96%, 49%);
 }
 @media screen and (max-width: 480px) {
   .browse {
-    padding-left: 12px;
+    padding-left: 30px;
+    margin-top: 1rem;
+  }
+  .browse > * {
+    margin: 0;
+  }
+  .title{
+    font-size: 1.3rem;
+    margin-bottom: 0;
+  }
+  .query{
+    font-size: 1.4rem;
+    margin-bottom: 0;
   }
 }
