--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -81,7 +81,7 @@ a {
 }
 
 a h2 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 300;
   letter-spacing: 1.2px;
   padding-right: 15px;
@@ -104,7 +104,6 @@ a.active h2 {
 }
 @media screen and (max-width: 768px) {
   .logo {
-    color: #e50914;
     height: 4rem;
     padding: 5px 20px 0 25px;
   }
@@ -115,10 +114,31 @@ a.active h2 {
     margin-right: 6px;
   }
 }
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
+  a h2{
+    padding-right: 5px;
+  }
+  .logo{
+    padding-right: 10px;
+  }
   .signout__button {
     top: 100%;
     height: 2rem;
     width: 6.5rem;
+  }
+  .navprofile img{
+    height:1.9rem;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .logo {
+    height: 2.7rem;
+    padding: 5px 10px 0 10px;
+  }
+  a h2{
+    font-size: 1.1rem;
+  }
+  .primary__nav{
+    padding-left: 10px;
   }
 }
